# navigator

./: Dockerfile  README.md  docker-compose.yml
catkin_ws/devel/lib/pkgconfig/: turt_q_learn.pc
catkin_ws/devel/share/turt_q_learn/cmake/: turt_q_learnConfig.cmake
catkin_ws/src/dqnTurtlebot/: .gitignore  pyproject.toml
catkin_ws/src/dqnTurtlebot/turt_q_learn/dqnmodels/mySession - 2025-02-01-11-11-33/: allParams.txt
catkin_ws/src/dqnTurtlebot/turt_q_learn/dqnmodels/mySession - 2025-02-01-11-15-35/: allParams.txt
catkin_ws/src/dqnTurtlebot/turt_q_learn/dqnmodels/mySession - 2025-02-01-11-16-14/: allParams.txt
catkin_ws/src/dqnTurtlebot/turt_q_learn/dqnmodels/mySession - 2025-02-01-11-16-56/: allParams.txt
catkin_ws/src/dqnTurtlebot/turt_q_learn/dqnmodels/mySession - 2025-02-01-11-22-49/: allParams.txt
catkin_ws/src/dqnTurtlebot/turt_q_learn/dqnmodels/mySession - 2025-02-01-13-28-49/: allParams.txt
catkin_ws/src/dqnTurtlebot/turt_q_learn/dqnmodels/mySession - 2025-02-01-13-28-49/myModel - 2025-02-01-13-28-49/: model
catkin_ws/src/dqnTurtlebot/turt_q_learn/scripts/: pathfinder.py  turt_q_learn_hypers.py
