[project]
name = "dqnturtlebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "h5py==2.10.0",
    "ipython>=7.34.0",
    "matplotlib==2.2.4",
    "protobuf==3.20.*",
    "pyyaml==5.1.2",
    "rospkg==1.2.6",
    "tensorflow==1.15.0",
]
